# duckdb-coda

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: CodaTests.yml  MainDistributionPipeline.yml  SuperhumanDocsTests.yml
src/: attach.rs  client.rs  coda_client.cpp  coda_extension.cpp  coda_scan.cpp  coda_storage.cpp  constants.rs  exports.rs  ffi.rs  json.rs  lib.rs  model.rs  mutation.rs  scan.rs  sdk.rs  secret.rs  tests.rs
src/attach/: host.rs  resource.rs
src/client/: catalog.rs  scan.rs
src/cpp/: rust_bridge_client.cpp  rust_bridge_client_dml.cpp  rust_bridge_extension.cpp  rust_bridge_scan.cpp  rust_bridge_scan_planning.cpp  rust_bridge_secret.cpp  rust_bridge_storage.cpp  rust_bridge_value.cpp
src/cpp/storage/: rust_bridge_catalog.cpp  rust_bridge_catalog_planning.cpp  rust_bridge_dml.cpp  rust_bridge_schema.cpp  rust_bridge_table.cpp  rust_bridge_transaction_manager.cpp
src/exports/: client.rs  extension.rs  memory.rs  metadata.rs  scan.rs  scan_planning.rs  secret.rs
src/ffi/: host.rs  runtime.rs
src/include/: coda_client.hpp  coda_extension.hpp  coda_scan.hpp  coda_storage.hpp  rust_bridge_client.hpp  rust_bridge_client_resources.hpp  rust_bridge_duckdb_extension.hpp  rust_bridge_extension.h  rust_bridge_scan.hpp  rust_bridge_scan_planning.hpp  rust_bridge_secret.hpp  rust_bridge_storage.hpp  rust_bridge_string.hpp  rust_bridge_types.hpp  rust_bridge_value.hpp  superhuman_docs_extension.hpp
src/include/storage/: coda_catalog.hpp  coda_dml.hpp  coda_schema.hpp  coda_table.hpp  coda_transaction.hpp  coda_transaction_manager.hpp  rust_bridge_catalog.hpp  rust_bridge_dml.hpp  rust_bridge_schema.hpp  rust_bridge_table.hpp  rust_bridge_transaction.hpp  rust_bridge_transaction_manager.hpp
src/json/: catalog.rs  ffi.rs  rows.rs
src/mutation/: payload.rs  status.rs
src/sdk/: transport.rs
src/storage/: coda_catalog.cpp  coda_dml.cpp  coda_schema.cpp  coda_table.cpp  coda_transaction_manager.cpp
src/tests/: duckdb.rs  mock.rs
src/tests/mock_server/: mod.rs  responses.rs
src/tests/real/: api.rs  duckdb_cases.rs  mod.rs  wide.rs
src/tests/unit/: attach.rs  json.rs  mod.rs  mutation.rs  scan.rs  sdk.rs
test/: coda_http_mock.py
test/coda_integration/: __init__.py  glue.py  harness.py  mock_backend.py  real_backend.py  testcases.py
test/sql/: coda_offline.test  superhuman_docs_offline.test
