[package]
name = "duckdb-coda"
version = "0.1.0"
edition = "2021"

[lib]
name = "coda_rust"
crate-type = ["staticlib"]

[dependencies]
serde_json = { version = "1", features = ["arbitrary_precision"] }
superhuman-docs = { git = "https://github.com/its-felix/superhuman-docs-sdk.git", tag = "v0.2.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
